img and temp alignment fixed

--- a/src/Containers/WeatherApp.css
+++ b/src/Containers/WeatherApp.css
@@ -45,7 +45,6 @@
   font-size: 16px;
   font-weight: 400;
   position: relative;
-  top: -34px;
   margin-left: 5px;
   line-height: 1;
 }
